--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/login.css">
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script
       src="https://kit.fontawesome.com/2d399dc2b9.js"
@@ -33,14 +34,37 @@
               placeholder="Search"
               aria-label="Search"
             />
-            <button class="btn btn-primary" type="submit">
-              Subscribe
-            </button>
-            <button class="btn btn-link-sm" type="submit">LOGIN</button>
+            <button class="btn btn-primary btn-link-sm login" type="button">LOGIN</button>
           </form>
         </div>
       </nav>
     </section>
+    <div class="message">
+      <span id="msg">Welcome User</span>
+    </div>
+    <div class="logincontainer">
+      <div class="login">
+        <h2>LOGIN</h2>
+        <p>Please Login to continue</>
+          <!-- <label for="uname"><b>Username</b></label> -->
+        <div class="close">
+          <img src="images/close.png" alt="" height="30px">
+        </div>
+        <div class="input-field">
+          <input type="text" placeholder="Enter Username" name="uname" id="username" />
+        </div>
+        <h5 class="u_msg"></h5>
+        <div class="input-field">
+          <input type="password" placeholder="Enter Password" name="psw" id="pass" />
+          <i class="uil uil-lock icon"></i>
+          <i class="fa fa-eye showP icon" onclick="show()"></i>
+        </div>
+        <!-- <label for="psw"><b>Password</b></label> -->
+        <h5 class="p2"></h5>
+        <input type="submit" class="b1" value="LOGIN" onclick="login()"/>
+        <p>Don't Have an account?<a href="signup.html">Sign Up</a></p>
+      </div>
+    </div>
     <section id="testimonals">
       <div
         id="carouselExampleIndicators"
@@ -223,4 +247,6 @@
       <p>Made by Mamoon Siddiqui</p>
     </footer>
   </body>
+  <script src="js/script.js"></script>
+  <script src="js/login.js"></script>
 </html>
